# django_default

./: .gitignore  README.md  pyproject.toml  test.py
app/config/: urls.py  utils.py  views.py
app/config/settings/: __init__.py  _secret.py  allauth.py  debug.py  path.py  production.py  settings.py  url.py  user.py
app/templates/: index.html
app/templates/common/: base.html  favicon.html  footer.html  header.html  ogp.html
app/user/: adapter.py  admin.py  apps.py  form.py  urls.py  utils.py  views.py
app/user/migrations/: 0001_initial.py
app/user/models/: user.py
app/user/templates/user/: home.html  test.html
